# Boost.NumPy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SConscript  package.xml
boost/: numpy.hpp
boost/numpy/: ndarray.hpp
cmake/: BoostNumpyConfig.cmake.in
libs/numpy/cmake/: FindPythonLibsNew.cmake
libs/numpy/doc/: CMakeLists.txt  cmakeBuild.rst
libs/numpy/doc/tutorial/: dtype.rst  fromdata.rst  ndarray.rst  simple.rst
libs/numpy/example/: CMakeLists.txt
libs/numpy/src/: CMakeLists.txt  SConscript  dtype.cpp  numpy.cpp
libs/numpy/test/: CMakeLists.txt  SConscript  dtype.py  dtype_mod.cpp  runCmakeTest.sh.in
